# opt_cmp

./: .gitignore  .gitmodules  CMakeLists.txt
include/: bamlogoharness.h  bamsooharness.h  boharness.h  boharness_timers.h  bopt.h  clogo.h  common.h  dimgpoharness.h  directharness.h  dsooharness.h  fixedboharness.h  function.h  functions.h  harness.h  imgpoharness.h  initbamsooharness.h  logoharness.h  randomharness.h  sequentialharness.h  sooharness.h  timer.h  types.h
scripts/: parse.py  plot_angles.py  plot_regrets.py
src/: bamlogoharness.cc  bamsooharness.cc  boharness.cc  bopt.cc  clogo.cc  common.cc  dimgpoharness.cc  directharness.cc  dsooharness.cc  fixedboharness.cc  function.cc  functions.cc  harness.cc  imgpoharness.cc  initbamsooharness.cc  logo.cc  logoharness.cc  main.cc  randomharness.cc  sequentialharness.cc  sooharness.cc  timer.cc
